# nrfsense-box

./: CLAUDE.md  README.md
firmware/: Cargo.toml  build.rs  flash_uf2.sh  memory.x
firmware/.cargo/: config.toml
firmware/src/: bitbang_i2c.rs  lsm6ds3.rs  main.rs
pc-client/: Cargo.toml
pc-client/src/: main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
